--- a/flask-admin-boilerplate/static/css/sb-admin-2.css
+++ b/flask-admin-boilerplate/static/css/sb-admin-2.css
@@ -10046,8 +10046,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-color: #330000;
+  background-image: linear-gradient(180deg, #330000 10%, #330000b0 100%);
   background-size: cover;
 }
 
