--- a/flask-admin-boilerplate/static/scss/navs/_global.scss
+++ b/flask-admin-boilerplate/static/scss/navs/_global.scss
@@ -13,13 +13,13 @@
           vertical-align: 0;
           border: 0;
           font-weight: 900;
-          content: '\f105';
-          font-family: 'Font Awesome 5 Free';
+          content: "\f105";
+          font-family: "Font Awesome 5 Free";
         }
       }
       &.show {
         .dropdown-toggle::after {
-          content: '\f107';
+          content: "\f107";
         }
       }
     }
@@ -30,8 +30,8 @@
         position: absolute;
         transform: scale(0.7);
         transform-origin: top right;
-        right: .25rem;
-        margin-top: -.25rem;
+        right: 0.25rem;
+        margin-top: -0.25rem;
       }
       .img-profile {
         height: 2rem;
