--- a/flask-admin-boilerplate/templates/admin-layout.html
+++ b/flask-admin-boilerplate/templates/admin-layout.html
@@ -31,9 +31,10 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
+          <!-- <i class="fas fa-laugh-wink"></i> -->
+          <img src="/static/img/ups_logo.png" height="50px" width="40px">
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3">Driving Safety Tool</div>
       </a>
 
       <!-- Divider -->
