--- a/flask-admin-boilerplate/templates/admin-layout.html
+++ b/flask-admin-boilerplate/templates/admin-layout.html
@@ -30,7 +30,7 @@
 
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-        <div class="sidebar-brand-icon rotate-n-15">
+        <div class="sidebar-brand-icon">
           <!-- <i class="fas fa-laugh-wink"></i> -->
           <img src="/static/img/ups_logo.png" height="50px" width="40px">
         </div>
