--- a/flask-admin-boilerplate/templates/admin-layout.html
+++ b/flask-admin-boilerplate/templates/admin-layout.html
@@ -34,7 +34,7 @@
           <!-- <i class="fas fa-laugh-wink"></i> -->
           <img src="/static/img/ups_logo.png" height="50px" width="40px">
         </div>
-        <div class="sidebar-brand-text mx-3">NeuraDrive</div>
+        <div class="sidebar-brand-text mx-3">NeuroDrive</div>
       </a>
 
       <!-- Divider -->
